[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PinterestHealthAuto"
version = "0.1.0"
description = "Automated Pinterest affiliate marketing pipeline for US health & wellness niche"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "typer>=0.12",
  "rich>=13.7"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
pha = "pinterest_health_auto.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
